2005-04-14  Werner Koch  <wk@g10code.com>

	* sexp.c (whitespacep): New.
	(sexp_sscan): Replace isdigit and isspace by whitespacep and
	digitp.

2005-02-22  Werner Koch  <wk@g10code.com>

	* global.c (_gcry_malloc): Make sure ERRNO is set if we return
	NULL.  Remove unneeded initialization of M to allow the compiler
	to catch errors.
	(gcry_realloc): Make sure ERRNO is set if we return NULL.

2005-01-05  Werner Koch  <wk@g10code.com>

	* gcrypt.h: Added GCRYCTL_FAST_POLL.
	(gcry_fast_random_poll): New.
	* global.c (gcry_control) <FAST_POLL>: New.

2004-12-20  Werner Koch  <wk@g10code.com>

	* gcrypt.h (GCRY_THREAD_OPTION_PTH_IMPL): Tweaks for W32.

2004-12-06  Werner Koch  <wk@g10code.com>

	* g10lib.h (stpcpy, strcasecmp): Prefix them with _gcry_ and add
	macros to define them to the real name.  This is needed to avoid
	double symbols when using static linkage.
	* missing-string.c: Likewise.
	(vasprintf): Removed as it is not used anywhere.

2004-11-26  Werner Koch  <wk@g10code.com>

	* types.h [_WIN32]: Avoid warning about double defined type byte.

2004-11-25  Werner Koch  <wk@g10code.com>

	* ath.h [_WIN32]: Adjusted for modern mingw cross compiler.

2004-11-09  Werner Koch  <wk@g10code.de>

	* gcrypt.h: Removed 3 trailing commas from enums.  Reported by
	Heiko Stamer.

2004-09-21  Werner Koch  <wk@g10code.de>

	* sexp.c (sexp_sscan): Removed c++ style commets.  Noted by Yoann
	Vandoorselaere.

2004-09-15  Werner Koch  <wk@g10code.de>

	* global.c (gcry_control): Adjusted random into call for the
	changed API in random.c.  Seemed we never compiled the entire
	thing since May.

2004-08-22  Moritz Schulte  <moritz@g10code.com>

	* secmem.c (_gcry_secmem_init): Try to lock pool into core not
	only when running with root privileges.

2004-08-16  Werner Koch  <wk@g10code.de>

	* secmem.c (_gcry_secmem_init): Defer printing of the warning.

2004-08-10  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h: Include <sys/time.h>, thanks to Simon Josefsson.
